--- a/index.html
+++ b/index.html
@@ -23,10 +23,46 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
+        var colors = {
+            "CDM": "red",
+            "CJM": "green",
+            "CEM": "purple",
+            "CEB": "pink",
+            "CEAV": "darkblue",
+            "ULA/FIJA": "blue",
+            "ULA/MÓVIL": "yellow",
+            "ULA/Itinerante": "brown",
+            "ULA/TEL": "gray",
+            "CAMVIF": "lightblue",
+            "IMMT": "darkred",
+            "CAVIZ": "orange",
+            "CEA": "purple",
+            "IMM": "pink",
+            "Punto Violeta": "violet",
+            "Refugio": "black",
+            "LÍNEA TELEFÓNICA": "gray",
+            "CJMF": "black",
+            "DIG": "blue",
+            "IMEF": "teal",
+            "Otro": "darkgray"
+        };
+
         fetch('CENTROS_DE_ATENCION.geojson')
             .then(response => response.json())
             .then(data => {
                 L.geoJSON(data, {
+                    pointToLayer: function (feature, latlng) {
+                        var tipo = feature.properties.Tipo ? feature.properties.Tipo.trim() : "Otro";
+                        var color = colors[tipo] || colors["Otro"];
+                        return L.circleMarker(latlng, {
+                            radius: 6,
+                            fillColor: color,
+                            color: "#000",
+                            weight: 1,
+                            opacity: 1,
+                            fillOpacity: 0.8
+                        });
+                    },
                     onEachFeature: function (feature, layer) {
                         console.log(feature.properties);  // Para depuración en consola
 
@@ -34,7 +70,7 @@
                                             <b>Municipio:</b> ${feature.properties.Municipio || "No disponible"}<br>
                                             <b>Nombre de la institución:</b> ${feature.properties["Nombre de la institución"] || "No disponible"}<br>
                                             <b>Tipo de Unidad:</b> ${feature.properties.Tipo || "No especificado"}<br>
-                                            <b>Dirección:</b> ${feature.properties.Direccion || "No disponible"}<br>
+                                            <b>Dirección:</b> ${feature.properties.Dirección || "No disponible"}<br>
                                             <b>Horarios:</b> ${feature.properties.Horarios || "No disponible"}<br>
                                             <b>Teléfono:</b> ${feature.properties.Teléfono || "No disponible"}`;
 
@@ -46,4 +82,3 @@
     </script>
 </body>
 </html>
-
