--- a/index.html
+++ b/index.html
@@ -28,6 +28,44 @@
     <div id="map"></div>
     
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="script.js"></script>
+    <script>
+        var map = L.map('map').setView([23.6345, -102.5528], 5);
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; OpenStreetMap contributors'
+        }).addTo(map);
+
+        fetch('CENTROS_DE_ATENCION.geojson')
+            .then(response => response.json())
+            .then(data => {
+                L.geoJSON(data, {
+                    pointToLayer: function (feature, latlng) {
+                        return L.circleMarker(latlng, {
+                            radius: 6,
+                            fillColor: "blue",
+                            color: "#000",
+                            weight: 1,
+                            opacity: 1,
+                            fillOpacity: 0.8
+                        });
+                    },
+                    onEachFeature: function (feature, layer) {
+                        console.log(feature.properties);  // Para depuración en consola
+
+                        var popupContent = `<b>Estado:</b> ${feature.properties.Estado || "No disponible"}<br>
+                                            <b>Municipio:</b> ${feature.properties.Municipio || "No disponible"}<br>
+                                            <b>Nombre de la institución:</b> ${feature.properties["Nombre de la institución"] || "No disponible"}<br>
+                                            <b>Tipo de Unidad:</b> ${feature.properties.Tipo || "No especificado"}<br>
+                                            <b>Dirección:</b> ${feature.properties["Dirección"] || "No disponible"}<br>
+                                            <b>Horarios:</b> ${feature.properties.Horarios || "No disponible"}<br>
+                                            <b>Teléfono:</b> ${feature.properties.Teléfono || "No disponible"}`;
+
+                        layer.bindPopup(popupContent);
+                    }
+                }).addTo(map);
+            })
+            .catch(error => console.error('Error cargando el archivo GeoJSON:', error));
+    </script>
 </body>
 </html>
+
