--- a/index.html
+++ b/index.html
@@ -30,42 +30,91 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
         var map = L.map('map').setView([23.6345, -102.5528], 5);
+        var markersLayer = L.layerGroup().addTo(map);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
+        var geojsonData;
         fetch('CENTROS_DE_ATENCION.geojson')
             .then(response => response.json())
             .then(data => {
-                L.geoJSON(data, {
-                    pointToLayer: function (feature, latlng) {
-                        return L.circleMarker(latlng, {
-                            radius: 6,
-                            fillColor: "blue",
-                            color: "#000",
-                            weight: 1,
-                            opacity: 1,
-                            fillOpacity: 0.8
-                        });
-                    },
-                    onEachFeature: function (feature, layer) {
-                        console.log(feature.properties);  // Para depuración en consola
-
-                        var popupContent = `<b>Estado:</b> ${feature.properties.Estado || "No disponible"}<br>
-                                            <b>Municipio:</b> ${feature.properties.Municipio || "No disponible"}<br>
-                                            <b>Nombre de la institución:</b> ${feature.properties["Nombre de la institución"] || "No disponible"}<br>
-                                            <b>Dirección:</b> ${feature.properties["Dirección"] || "No disponible"}<br>
-                                            <b>Tipo de Unidad:</b> ${feature.properties.Tipo || "No especificado"}<br>
-                                            <b>Horarios:</b> ${feature.properties.Horarios || "No disponible"}<br>
-                                            <b>Teléfono:</b> ${feature.properties.Teléfono || "No disponible"}`;
-
-                        layer.bindPopup(popupContent);
-                    }
-                }).addTo(map);
+                geojsonData = data;
+                cargarDatos(data);
+                llenarFiltros(data);
             })
             .catch(error => console.error('Error cargando el archivo GeoJSON:', error));
+
+        function cargarDatos(data) {
+            markersLayer.clearLayers();
+            L.geoJSON(data, {
+                pointToLayer: function (feature, latlng) {
+                    return L.circleMarker(latlng, {
+                        radius: 6,
+                        fillColor: "blue",
+                        color: "#000",
+                        weight: 1,
+                        opacity: 1,
+                        fillOpacity: 0.8
+                    });
+                },
+                onEachFeature: function (feature, layer) {
+                    console.log("Propiedades del punto:", feature.properties);
+
+                    var popupContent = `<b>Estado:</b> ${feature.properties["Estado"] || "No disponible"}<br>
+                                        <b>Municipio:</b> ${feature.properties["Municipio"] || "No disponible"}<br>
+                                        <b>Nombre de la institución:</b> ${feature.properties["Nombre de la institución"] || "No disponible"}<br>
+                                        <b>Dirección:</b> ${feature.properties["Dirección"] || "No disponible"}<br>
+                                        <b>Tipo de Unidad:</b> ${feature.properties["Tipo"] || "No especificado"}<br>
+                                        <b>Horarios:</b> ${feature.properties["Horarios"] || "No disponible"}<br>
+                                        <b>Teléfono:</b> ${feature.properties["Teléfono"] || "No disponible"}`;
+                    layer.bindPopup(popupContent);
+                    markersLayer.addLayer(layer);
+                }
+            });
+        }
+
+        function llenarFiltros(data) {
+            let estados = new Set();
+            let tipos = new Set();
+            data.features.forEach(feature => {
+                if (feature.properties.Estado) estados.add(feature.properties.Estado);
+                if (feature.properties.Tipo) tipos.add(feature.properties.Tipo);
+            });
+
+            let estadoSelect = document.getElementById("estado");
+            let tipoSelect = document.getElementById("tipo");
+
+            estados.forEach(estado => {
+                let option = document.createElement("option");
+                option.value = estado;
+                option.textContent = estado;
+                estadoSelect.appendChild(option);
+            });
+
+            tipos.forEach(tipo => {
+                let option = document.createElement("option");
+                option.value = tipo;
+                option.textContent = tipo;
+                tipoSelect.appendChild(option);
+            });
+        }
+
+        function filtrarDatos() {
+            let estadoSeleccionado = document.getElementById("estado").value;
+            let tipoSeleccionado = document.getElementById("tipo").value;
+            
+            let datosFiltrados = {
+                type: "FeatureCollection",
+                features: geojsonData.features.filter(feature => {
+                    let cumpleEstado = estadoSeleccionado === "todos" || feature.properties.Estado === estadoSeleccionado;
+                    let cumpleTipo = tipoSeleccionado === "todos" || feature.properties.Tipo === tipoSeleccionado;
+                    return cumpleEstado && cumpleTipo;
+                })
+            };
+            cargarDatos(datosFiltrados);
+        }
     </script>
 </body>
 </html>
-
