--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        fetch('CENTROS_DE_ATENCION_LIMPIO.geojson')
+        fetch('CENTROS_DE_ATENCION.geojson')
             .then(response => response.json())
             .then(data => {
                 datosOriginales = data.features;
