--- a/index.html
+++ b/index.html
@@ -4,36 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa de Centros de Atención</title>
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    
+    <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
+
     <h1>Mapa de Centros de Atención</h1>
+
+    <!-- Filtros de Estado y Tipo de Unidad -->
     <div class="filters">
-        <label for="estado">Filtrar por Estado:</label>
+        <label for="filtroEstado">Filtrar por Estado:</label>
         <select id="filtroEstado">
-    <option value="Todos">Todos</option>
-    <option value="Chiapas">Chiapas</option>
-    <option value="Estado de México">Estado de México</option>
-</select>
+            <option value="Todos">Todos</option>
+        </select>
 
-<select id="filtroTipo">
-    <option value="Todos">Todos</option>
-    <option value="CDM">CDM</option>
-    <option value="ULA/FIJA">ULA/FIJA</option>
-    <option value="CJM">CJM</option>
-    <option value="Municipal">Municipal</option>
-</select>
+        <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
+        <select id="filtroTipo">
+            <option value="Todos">Todos</option>
+        </select>
 
-<button id="botonFiltrar">Aplicar Filtros</button>
-
-
-        <button onclick="filtrarDatos()">Aplicar Filtros</button>
+        <button id="botonFiltrar">Aplicar Filtros</button>
     </div>
 
+    <!-- Contenedor del Mapa -->
     <div id="map"></div>
 
+    <!-- Script de JavaScript -->
     <script src="script.js"></script>
+
 </body>
 </html>
