--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa de Centros de Atención</title>
-
+    
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="style.css">
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     
-    <!-- Leaflet JS -->
+    <!-- Leaflet CSS y JS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
-
     <h1>Mapa de Centros de Atención</h1>
 
-    <!-- Filtros de Estado y Tipo de Unidad -->
+    <!-- Contenedor de filtros -->
     <div class="filters">
         <label for="filtroEstado">Filtrar por Estado:</label>
         <select id="filtroEstado">
@@ -36,8 +33,7 @@
     <!-- Contenedor del Mapa -->
     <div id="map"></div>
 
-    <!-- Script de JavaScript -->
+    <!-- Script de configuración -->
     <script src="script.js"></script>
-
 </body>
 </html>
