--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <div class="filters">
         <label for="filtroEstado">Filtrar por Estado:</label>
-        <select id="filtroEstado">
-            <option value="Todos">Todos</option>
-        </select>
+<select id="filtroEstado">
+    <option value="Todos">Todos</option>
+</select>
 
-        <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
-        <select id="filtroTipo">
-            <option value="Todos">Todos</option>
-        </select>
+<label for="filtroInstitucion">Filtrar por Nombre de la Institución:</label>
+<select id="filtroInstitucion">
+    <option value="Todos">Todos</option>
+</select>
 
-        <button id="botonFiltrar">Aplicar Filtros</button>
+<button id="botonFiltrar">Aplicar Filtros</button>
 
     </div>
 
