--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <option value="Todos">Todos</option>
 </select>
 
-<label for="filtroInstitucion">Filtrar por Nombre de la Institución:</label>
-<select id="filtroInstitucion">
+<label for="filtroTipodeUnidad">Filtrar el Tipo de Unidad:</label>
+<select id="filtroTipodeUnidad">
     <option value="Todos">Todos</option>
 </select>
 
