--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <option value="Todos">Todos</option>
 </select>
 
-<label for="filtroTipodeUnidad">Filtrar el Tipo de Unidad:</label>
-<select id="filtroTipodeUnidad">
+<label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
+<select id="filtroTipo">
     <option value="Todos">Todos</option>
 </select>
 
 <button id="botonFiltrar">Aplicar Filtros</button>
+
 
     </div>
 
