--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 
     <div class="filters">
         <label for="filtroEstado">Filtrar por Estado:</label>
-<select id="filtroEstado">
-    <option value="Todos">Todos</option>
-</select>
+        <select id="filtroEstado">
+            <option value="Todos">Todos</option>
+        </select>
 
-<label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
-<select id="filtroTipo">
-    <option value="Todos">Todos</option>
-</select>
+        <label for="filtroMunicipio">Filtrar por Municipio:</label>
+        <select id="filtroMunicipio">
+            <option value="Todos">Todos</option>
+        </select>
 
-<button id="botonFiltrar">Aplicar Filtros</button>
+        <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
+        <select id="filtroTipo">
+            <option value="Todos">Todos</option>
+        </select>
 
-
+        <button id="botonFiltrar">Aplicar Filtros</button>
     </div>
 
     <div id="map"></div>
@@ -32,3 +35,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
