--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <option value="Todos">Todos</option>
         </select>
 
+        <label for="filtroMunicipio">Filtrar por Municipio:</label>
+        <select id="filtroMunicipio">
+            <option value="Todos">Todos</option>
+        </select>
 
         <label for="filtroTipo">Filtrar por Tipo de Unidad:</label>
         <select id="filtroTipo">
@@ -31,4 +35,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
