--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <option value="Todos">Todos</option>
         </select>
 
-        <button onclick="aplicarFiltros()">Aplicar Filtros</button>
+        <button id="botonFiltrar">Aplicar Filtros</button>
     </div>
 
     <div id="map"></div>
