--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <option value="Todos">Todos</option>
         </select>
 
-        <button id="botonFiltrar">Aplicar Filtros</button>
+        <button id="botonFiltrar" onclick="aplicarFiltros()">Aplicar Filtros</button>
+
     </div>
 
     <!-- Mapa -->
