--- a/index.html
+++ b/index.html
@@ -14,11 +14,58 @@
 
     <!-- FontAwesome para los íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        #container {
+            display: flex;
+            width: 90%;
+        }
+
+        #map {
+            flex: 3;
+            height: 600px;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+        }
+
+        #legend {
+            flex: 1;
+            padding: 10px;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            margin-left: 10px;
+            background: white;
+            height: fit-content;
+            overflow-y: auto;
+            max-height: 600px;
+        }
+
+        .legend-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+
+        .legend-icon {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-right: 8px;
+        }
+    </style>
 </head>
 <body>
     <h1>Mapa de Centros de Atención</h1>
 
-    <!-- Filtros -->
     <div class="filters">
         <label for="filtroEstado">Filtrar por Estado:</label>
         <select id="filtroEstado">
@@ -33,10 +80,29 @@
         <button id="botonFiltrar">Aplicar Filtros</button>
     </div>
 
-    <!-- Mapa -->
-    <div id="map"></div>
+    <div id="container">
+        <div id="map"></div>
+        <div id="legend">
+            <h3>Simbología</h3>
+            <div class="legend-item"><span class="legend-icon" style="background: red;"></span> CDM - Centro para el Desarrollo de las Mujeres</div>
+            <div class="legend-item"><span class="legend-icon" style="background: blue;"></span> ULA/FIJA - Unidad Local de Atención Fija</div>
+            <div class="legend-item"><span class="legend-icon" style="background: purple;"></span> CJM - Centro de Justicia para las Mujeres</div>
+            <div class="legend-item"><span class="legend-icon" style="background: orange;"></span> CEB - Centro de Empoderamiento y Bienestar</div>
+            <div class="legend-item"><span class="legend-icon" style="background: green;"></span> Municipal - Atención Municipal</div>
+            <div class="legend-item"><span class="legend-icon" style="background: yellow;"></span> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
+            <div class="legend-item"><span class="legend-icon" style="background: brown;"></span> ULA/TEL - Línea de Atención Telefónica</div>
+            <div class="legend-item"><span class="legend-icon" style="background: black;"></span> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
+            <div class="legend-item"><span class="legend-icon" style="background: pink;"></span> Punto Violeta - Espacios Seguros para Mujeres</div>
+            <div class="legend-item"><span class="legend-icon" style="background: cyan;"></span> Puerta Violeta - Programa de Seguridad para Mujeres</div>
+            <div class="legend-item"><span class="legend-icon" style="background: teal;"></span> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
+            <div class="legend-item"><span class="legend-icon" style="background: indigo;"></span> IMMT - Instituto Municipal de la Mujer</div>
+            <div class="legend-item"><span class="legend-icon" style="background: lightcoral;"></span> MAI - Módulo de Atención Integral</div>
+            <div class="legend-item"><span class="legend-icon" style="background: darkorchid;"></span> IMM - Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><span class="legend-icon" style="background: darkgoldenrod;"></span> CAVIZ - Centro de Atención a la Violencia</div>
+            <div class="legend-item"><span class="legend-icon" style="background: mediumseagreen;"></span> DIG - Dirección de Igualdad de Género</div>
+        </div>
+    </div>
 
-    <!-- Script del mapa -->
     <script src="script.js"></script>
 </body>
 </html>
