--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
         }
 
         .legend-icon {
-            width: 15px;
-            height: 15px;
-            border-radius: 50%;
-            display: inline-block;
+            font-size: 14px;
             margin-right: 8px;
         }
     </style>
@@ -83,27 +80,28 @@
     <div id="container">
         <div id="map"></div>
         <div id="legend">
-            <h3>Simbología</h3>
-            <div class="legend-item"><span class="legend-icon" style="background: red;"></span> CDM - Centro para el Desarrollo de las Mujeres</div>
-            <div class="legend-item"><span class="legend-icon" style="background: blue;"></span> ULA/FIJA - Unidad Local de Atención Fija</div>
-            <div class="legend-item"><span class="legend-icon" style="background: purple;"></span> CJM - Centro de Justicia para las Mujeres</div>
-            <div class="legend-item"><span class="legend-icon" style="background: orange;"></span> CEB - Centro de Empoderamiento y Bienestar</div>
-            <div class="legend-item"><span class="legend-icon" style="background: green;"></span> Municipal - Atención Municipal</div>
-            <div class="legend-item"><span class="legend-icon" style="background: yellow;"></span> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
-            <div class="legend-item"><span class="legend-icon" style="background: brown;"></span> ULA/TEL - Línea de Atención Telefónica</div>
-            <div class="legend-item"><span class="legend-icon" style="background: black;"></span> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
-            <div class="legend-item"><span class="legend-icon" style="background: pink;"></span> Punto Violeta - Espacios Seguros para Mujeres</div>
-            <div class="legend-item"><span class="legend-icon" style="background: cyan;"></span> Puerta Violeta - Programa de Seguridad para Mujeres</div>
-            <div class="legend-item"><span class="legend-icon" style="background: teal;"></span> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
-            <div class="legend-item"><span class="legend-icon" style="background: indigo;"></span> IMMT - Instituto Municipal de la Mujer</div>
-            <div class="legend-item"><span class="legend-icon" style="background: lightcoral;"></span> MAI - Módulo de Atención Integral</div>
-            <div class="legend-item"><span class="legend-icon" style="background: darkorchid;"></span> IMM - Instituto de la Mujer Municipal</div>
-            <div class="legend-item"><span class="legend-icon" style="background: darkgoldenrod;"></span> CAVIZ - Centro de Atención a la Violencia</div>
-            <div class="legend-item"><span class="legend-icon" style="background: mediumseagreen;"></span> DIG - Dirección de Igualdad de Género</div>
+            <h3>Leyenda</h3>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: red;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: blue;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: purple;"></i> CJM - Centro de Justicia para las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: orange;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: green;"></i> Municipal - Atención Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: yellow;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: brown;"></i> ULA/TEL - Línea de Atención Telefónica</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: black;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: pink;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: cyan;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: teal;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: indigo;"></i> IMMT - Instituto Municipal de la Mujer</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: lightcoral;"></i> MAI - Módulo de Atención Integral</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: darkorchid;"></i> IMM - Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: darkgoldenrod;"></i> CAVIZ - Centro de Atención a la Violencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: mediumseagreen;"></i> DIG - Dirección de Igualdad de Género</div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
