--- a/index.html
+++ b/index.html
@@ -78,27 +78,28 @@
     </div>
 
     <div id="container">
-        <div id="map"></div>
-        <div id="legend">
-            <h3>Leyenda</h3>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: red;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: blue;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: purple;"></i> CJM - Centro de Justicia para las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: orange;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: green;"></i> Municipal - Atención Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: yellow;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: brown;"></i> ULA/TEL - Línea de Atención Telefónica</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: black;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: pink;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: cyan;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: teal;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: indigo;"></i> IMMT - Instituto Municipal de la Mujer</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: lightcoral;"></i> MAI - Módulo de Atención Integral</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: darkorchid;"></i> IMM - Instituto de la Mujer Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: darkgoldenrod;"></i> CAVIZ - Centro de Atención a la Violencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: mediumseagreen;"></i> DIG - Dirección de Igualdad de Género</div>
-        </div>
+    <div id="map"></div>
+    <div id="legend">
+        <h3>Leyenda</h3>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> CJM - Centro de Justicia para las Mujeres</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> Municipal - Atención Municipal</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> ULA/TEL - Línea de Atención Telefónica</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> IMMT - Instituto Municipal de la Mujer</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> MAI - Módulo de Atención Integral</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7D3C98;"></i> CAVIZ - Centro de Atención a la Violencia</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
     </div>
+</div>
+
 
     <script src="script.js"></script>
 </body>
