--- a/index.html
+++ b/index.html
@@ -97,8 +97,14 @@
         <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
         <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7D3C98;"></i> CAVIZ - Centro de Atención a la Violencia</div>
         <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2E86C1;"></i> CEA - Centro Externo de Atención</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF6F61;"></i> IMEF - Instituto de la Mujer Estatal y Federal</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #27A4F2;"></i> ULA/MÓVIL - Unidad Local de Atención Móvil</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #6D214F;"></i> ESTATAL - Atención Estatal</div>
+        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> MUNICIPAL - Atención Municipal</div>
     </div>
 </div>
+
 
 
     <script src="script.js"></script>
