--- a/index.html
+++ b/index.html
@@ -77,33 +77,31 @@
         <button id="botonFiltrar">Aplicar Filtros</button>
     </div>
 
-    <div id="container">
-    <div id="map"></div>
     <div id="legend">
-        <h3>Leyenda</h3>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> CJM - Centro de Justicia para las Mujeres</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> Municipal - Atención Municipal</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> ULA/TEL - Línea de Atención Telefónica</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> IMMT - Instituto Municipal de la Mujer</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> MAI - Módulo de Atención Integral</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7D3C98;"></i> CAVIZ - Centro de Atención a la Violencia</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2E86C1;"></i> CEA - Centro Externo de Atención</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF6F61;"></i> IMEF - Instituto de la Mujer Estatal y Federal</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #27A4F2;"></i> ULA/MÓVIL - Unidad Local de Atención Móvil</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #6D214F;"></i> ESTATAL - Atención Estatal</div>
-        <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> MUNICIPAL - Atención Municipal</div>
-    </div>
+    <h3>Leyenda</h3>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> CJM - Centro de Justicia para las Mujeres</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> Municipal - Atención Municipal</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> ULA/TEL - Línea de Atención Telefónica</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> IMMT - Instituto Municipal de la Mujer</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> MAI - Módulo de Atención Integral</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> CAVIZ - Centro de Atención a la Violencia</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> COBUPEJ - Comisión de Búsqueda de Personas</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> CDM/ITINERANTE - Centro para el Desarrollo de las Mujeres Itinerante</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> CEA - Centro Externo de Atención</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> ESTATAL - Atención Estatal</div>
+    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> IMEF - Instituto de las Mujeres en la Economía y Finanzas</div>
 </div>
+
 
 
 
