--- a/index.html
+++ b/index.html
@@ -25,27 +25,31 @@
         }
 
         #container {
-            display: flex;
+            position: relative;
             width: 90%;
+            height: 600px;
         }
 
         #map {
-            flex: 3;
-            height: 600px;
+            width: 100%;
+            height: 100%;
             border: 2px solid #ddd;
             border-radius: 10px;
         }
 
+        /* 🔥 Mejoras en la leyenda */
         #legend {
-            flex: 1;
-            padding: 10px;
-            border: 2px solid #ddd;
-            border-radius: 10px;
-            margin-left: 10px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 250px;
             background: white;
-            height: fit-content;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+            font-size: 14px;
             overflow-y: auto;
-            max-height: 600px;
+            max-height: 500px;
         }
 
         .legend-item {
@@ -75,38 +79,37 @@
         </select>
 
         <button id="botonFiltrar">Aplicar Filtros</button>
+        <button id="botonReset">Restablecer Mapa</button> <!-- 🔥 Nuevo botón para centrar el mapa -->
     </div>
 
-    <div id="legend">
-    <h3>Leyenda</h3>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> CJM - Centro de Justicia para las Mujeres</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> Municipal - Atención Municipal</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> ULA/TEL - Línea de Atención Telefónica</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> IMMT - Instituto Municipal de la Mujer</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> MAI - Módulo de Atención Integral</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> CAVIZ - Centro de Atención a la Violencia</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> COBUPEJ - Comisión de Búsqueda de Personas</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> CDM/ITINERANTE - Centro para el Desarrollo de las Mujeres Itinerante</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> CEA - Centro Externo de Atención</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> ESTATAL - Atención Estatal</div>
-    <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> IMEF - Instituto de las Mujeres en la Economía y Finanzas</div>
-</div>
-
-
-
+    <div id="container">
+        <div id="map"></div>  
+        <div id="legend">
+            <h3>Leyenda</h3>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> CDM - Centro para el Desarrollo de las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> ULA/FIJA - Unidad Local de Atención Fija</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> CJM - Centro de Justicia para las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> CEB - Centro de Empoderamiento y Bienestar</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> Municipal - Atención Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> ULA/Itinerante - Unidad Local de Atención Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> ULA/TEL - Línea de Atención Telefónica</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> ULA/EMERGENCIA - Unidad de Atención de Emergencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> Punto Violeta - Espacios Seguros para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> Puerta Violeta - Programa de Seguridad para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> CEAV - Comisión Ejecutiva de Atención a Víctimas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> IMMT - Instituto Municipal de la Mujer</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> MAI - Módulo de Atención Integral</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> IMM - Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> CAVIZ - Centro de Atención a la Violencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> DIG - Dirección de Igualdad de Género</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> COBUPEJ - Comisión de Búsqueda de Personas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> CDM/ITINERANTE - Centro para el Desarrollo de las Mujeres Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> CEA - Centro Externo de Atención</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> ESTATAL - Atención Estatal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> IMEF - Instituto de las Mujeres en la Economía y Finanzas</div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
-
