--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             border-radius: 10px;
         }
 
-        /* 🔥 Mejoras en la leyenda */
+        /* 🔥 Ajustes en la leyenda */
         #legend {
             position: absolute;
             top: 10px;
@@ -79,7 +79,6 @@
         </select>
 
         <button id="botonFiltrar">Aplicar Filtros</button>
-        <button id="botonReset">Restablecer Mapa</button> <!-- 🔥 Nuevo botón para centrar el mapa -->
     </div>
 
     <div id="container">
