--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             align-items: center;
             gap: 15px;
             padding: 10px 20px;
-            background: white;
+            background: #4A90E2; /* Azul bonito */
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             margin-bottom: 15px;
         }
 
         .filter-label {
-            background: #444;
+            background: #2874A6; /* Azul más oscuro */
             color: white;
             padding: 5px 10px;
             border-radius: 5px;
