--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f8f9fa;
+            background-color: #E3EAF2; /* 🌿 Color más suave y equilibrado */
         }
 
         h1 {
@@ -35,7 +35,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #2F80ED;
+            background: #4C6FA3; /* 🎨 Color más equilibrado */
             padding: 10px;
             border-radius: 8px;
             color: white;
@@ -54,13 +54,13 @@
         }
 
         button {
-            background-color: #1B4F72;
+            background-color: #2C3E50;
             color: white;
             cursor: pointer;
         }
 
         button:hover {
-            background-color: #154360;
+            background-color: #1F2C3A;
         }
 
         #container {
@@ -78,7 +78,7 @@
         /* 🔥 Ajustes en la leyenda */
         #legend {
             position: absolute;
-            top: 10px;
+            bottom: 10px;
             right: 10px;
             width: 280px;
             background: white;
@@ -87,7 +87,7 @@
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             font-size: 14px;
             overflow-y: auto;
-            max-height: 500px;
+            max-height: 400px;
             text-align: left;
         }
 
