--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #E3EAF2; /* 🌿 Color más suave y equilibrado */
+            background-color: #F5F5F5; /* 🎨 Color más neutral y moderno */
         }
 
         h1 {
@@ -35,7 +35,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #4C6FA3; /* 🎨 Color más equilibrado */
+            background: #A67C52; /* 🎨 Color cálido, elegante y sin azul */
             padding: 10px;
             border-radius: 8px;
             color: white;
@@ -54,13 +54,13 @@
         }
 
         button {
-            background-color: #2C3E50;
+            background-color: #5D4037;
             color: white;
             cursor: pointer;
         }
 
         button:hover {
-            background-color: #1F2C3A;
+            background-color: #4E342E;
         }
 
         #container {
@@ -156,4 +156,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
